# TTUD

./: BCA.cpp  Boundingrectangle.cpp  CMakeLists.txt  IntLinearEquation.cpp  README.md  input.txt  tempCodeRunnerFile.cpp  test.cpp
BackTracking/: BCA.cpp  CVRPCOUNT.cpp  CountTheNumOfReSumP.cpp  DienPhepToan.cpp  GenWayNbySumK.cpp  TSP.cpp  binN11.cpp  binary.cpp  countNways.cpp  genK2N.cpp  tempCodeRunnerFile.cpp  test.cpp
DC/: AGGRCOW.cpp  CLOPAIR.cpp  FIBWORDS.cpp  dayChan.cpp  daytang.cpp  maxSubArray.cpp  oChuNhiPhan.cpp  test.txt
DP/: GOLDMINING.cpp  KNAPSAC.cpp  MACHINE.cpp  MaxEvenSubSeq.cpp  RETAILOUTLETS.cpp  TimCachBanHangToiUu.cpp  WAREHOUSE.cpp  waterjugs.cpp
DS/: KMP.cpp  LargetBlack.cpp  MAZE.cpp  addTwoInt.cpp  base_moore.cpp  countNumberOfpairsequalQ.cpp  disjointSegment.cpp  expmod.cpp  idolThuong.cpp  linear.cpp  parentheses.cpp  rmp.cpp  simuStack.cpp  startingDate_time.cpp  storeString.cpp  telcodatacheck.cpp
Final/: GenK-N.cpp  boundingRetangle.cpp  cap.out  groupup.cpp  input.txt  lis1.cpp  simuationQeuee.cpp  sinhtest.cpp  tempCodeRunnerFile.cpp  test.cpp
Final/final2016/: kseq.cpp  netalz.cpp  primes.cpp  tempCodeRunnerFile.cpp
Graphs/: BFS.cpp  BUGLIFE.cpp  DFS.cpp  DFStree.cpp  checkBipartiteGraph.cpp  checkCycle.cpp  checkCycle.txt  countConponent.cpp  csrv.cpp  dijktra.cpp  elevtrbl.cpp  findPath.cpp  icbus.cpp  input.txt  kosaraju.cpp  kruskal.cpp  prim.cpp  seqOfNodeDFS.cpp  shortestPath2nodes.cpp  strongCo.cpp  tempCodeRunnerFile.cpp  test.cpp  test2.cpp  topo.cpp  union_find.cpp
Greedy/: ATM.cpp  change.cpp  doanthang.cpp  money.cpp
MidTestTTUD/: 20205106_BAI1.cpp  20205106_BAI2.cpp  20205106_BAI3.cpp  20205106_BAI4.cpp  test.cpp
Openerp/Code/: BCA.cpp  BINARYGEN.cpp  Binary.cpp  Binary2.cpp  BinaryList.cpp  Blopper.cpp  Common.cpp  DMS.cpp  DMS2.cpp  EXPREVAL.txt  EZSUDOKU.cpp  EZSUDOKU2.cpp  Gold.cpp  HoanVi.cpp  IncSeq.cpp  LSC.txt  Lienthongmanh.cpp  LinearEquation.cpp  LinearEquation2.cpp  LongSubSeqCommon.cpp  Machine.cpp  Maxseq.cpp  MoneyChange.cpp  NguoiDuLich.cpp  NguoiDuLich2.cpp  ORDERPAIR.cpp  PARENTHESES.cpp  PermutationList.cpp  PhancongCV.cpp  PhancongCV.txt  PhoneList.cpp  QSort.cpp  SVG.cpp  Sort.cpp  Subseqmax.cpp  Sudoku.cpp  Sudoku2.cpp  Sudoku3.cpp  Sumseq.cpp  TAXI.cpp  (+42 more)
OpenerpByMe/: SumPairEqualK.cpp  TextReplace.cpp
TTUD_midtest/: Bai1.cpp  DIGIT.cpp  DINO.cpp  DayChan.cpp  DayChan.txt  DayChan2.cpp  RUN.cpp  SUMX.cpp  test.cpp
final11_3/: 20205106_P01.cpp  20205106_P02.cpp  steinerTree.cpp  test.cpp
final11_3/analyze-delivery-trips/: MAX_CONFLICT_TRIP-1-input.txt  MAX_CONFLICT_TRIP-2-input.txt  MAX_CONFLICT_TRIP-3-input.txt  MAX_CONFLICT_TRIP-4-input.txt  QTY_CUSTOMER-1-input.txt  QTY_CUSTOMER-1-result.txt  QTY_CUSTOMER-2-input.txt  QTY_CUSTOMER-2-result.txt  QTY_CUSTOMER-3-result.txt  QTY_CUSTOMER-4-result.txt  QTY_MAX_PERIOD-1-input.txt  QTY_MAX_PERIOD-2-input.txt  QTY_MAX_PERIOD-2-result.txt  QTY_MAX_PERIOD-3-result.txt  QTY_MAX_PERIOD-4-result.txt  TOTAL_QTY-1-input.txt  TOTAL_QTY-2-input.txt  TOTAL_QTY-3-result.txt  TOTAL_QTY-4-result.txt  TOTAL_TRIPS-1-input.txt  TOTAL_TRIPS-2-input.txt  TRAVEL_TIME_TRIP-1-input.txt  TRAVEL_TIME_TRIP-1-result.txt  TRAVEL_TIME_TRIP-2-input.txt  TRAVEL_TIME_TRIP-3-result.txt  TRAVEL_TIME_TRIP-4-result.txt
final11_3/steiner-tree/: 1-input.txt  2-input.txt  3-input.txt
final2019/: chessboard.cpp  courseSchedule.cpp  tempCodeRunnerFile.cpp
