cmake_minimum_required(VERSION 3.24)
project(TTUD)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(TTUD
        BackTracking/BCA.cpp
        BackTracking/binary.cpp
        BackTracking/binN11.cpp
        BackTracking/BloperOperator.cpp
        BackTracking/CountTheNumOfReSumP.cpp
        BackTracking/CVRPCOUNT.cpp
        BackTracking/DienPhepToan.cpp
        BackTracking/genK2N.cpp
        BackTracking/GenWayNbySumK.cpp
        BackTracking/tempCodeRunnerFile.cpp
        BackTracking/test.cpp
        BackTracking/TSP.cpp
        DC/AGGRCOW.cpp
        DC/CLOPAIR.cpp
        DC/dayChan.cpp
        DC/daytang.cpp
        DC/FIBWORDS.cpp
        DC/maxSubArray.cpp
        DC/oChuNhiPhan.cpp
        DP/GOLDMINING.cpp
        DP/KNAPSAC.cpp
        DP/MACHINE.cpp
        DP/MaxEvenSubSeq.cpp
        DP/RETAILOUTLETS.cpp
        DP/TimCachBanHangToiUu.cpp
        DP/WAREHOUSE.cpp
        DS/addTwoInt.cpp
        DS/LargetBlack.cpp
        DS/linear.cpp
        DS/MAZE.cpp
        DS/rmp.cpp
        DS/telcodatacheck.cpp
        MidTestTTUD/20205106_BAI1.cpp
        MidTestTTUD/20205106_BAI2.cpp
        MidTestTTUD/20205106_BAI3.cpp
        MidTestTTUD/20205106_BAI4.cpp
        MidTestTTUD/test.cpp
        Openerp/Code/array_mod2.cpp
        Openerp/Code/balance.cpp
        Openerp/Code/BCA.cpp
        Openerp/Code/Binary.cpp
        Openerp/Code/Binary2.cpp
        Openerp/Code/BINARYGEN.cpp
        Openerp/Code/BinaryList.cpp
        Openerp/Code/Blopper.cpp
        Openerp/Code/Common.cpp
        Openerp/Code/dfs.cpp
        Openerp/Code/digits.cpp
        Openerp/Code/DMS.cpp
        Openerp/Code/DMS2.cpp
        Openerp/Code/expmod.cpp
        Openerp/Code/expr.cpp
        Openerp/Code/expreval.cpp
        Openerp/Code/EZSUDOKU.cpp
        Openerp/Code/EZSUDOKU2.cpp
        Openerp/Code/fastRead.cpp
        Openerp/Code/Gold.cpp
        Openerp/Code/HoanVi.cpp
        Openerp/Code/IncSeq.cpp
        Openerp/Code/int2bin.cpp
        Openerp/Code/lienthong.cpp
        Openerp/Code/Lienthongmanh.cpp
        Openerp/Code/LinearEquation.cpp
        Openerp/Code/LinearEquation2.cpp
        Openerp/Code/LongSubSeqCommon.cpp
        Openerp/Code/Machine.cpp
        Openerp/Code/Maxseq.cpp
        Openerp/Code/maxsubseq.cpp
        Openerp/Code/modulus.cpp
        Openerp/Code/MoneyChange.cpp
        Openerp/Code/NguoiDuLich.cpp
        Openerp/Code/NguoiDuLich2.cpp
        Openerp/Code/ORDERPAIR.cpp
        Openerp/Code/PARENTHESES.cpp
        Openerp/Code/PermutationList.cpp
        Openerp/Code/PhancongCV.cpp
        Openerp/Code/phantukhoi.cpp
        Openerp/Code/PhoneList.cpp
        Openerp/Code/QSort.cpp
        Openerp/Code/serial.cpp
        Openerp/Code/Sort.cpp
        Openerp/Code/Subseqmax.cpp
        Openerp/Code/subset.cpp
        Openerp/Code/subset_mid.cpp
        Openerp/Code/Sudoku.cpp
        Openerp/Code/Sudoku2.cpp
        Openerp/Code/Sudoku3.cpp
        Openerp/Code/Sumseq.cpp
        Openerp/Code/SVG.cpp
        Openerp/Code/taosonguyen.cpp
        Openerp/Code/taosothuc.cpp
        Openerp/Code/TAXI.cpp
        Openerp/Code/ToHop.cpp
        Openerp/Code/TOPO.cpp
        Openerp/Code/traobai.cpp
        Openerp/Code/TREEW.cpp
        Openerp/Code/TRIPLE.cpp
        Openerp/Code/TRIPLE2.cpp
        Openerp/Code/TSP.cpp
        Openerp/Code/tsp_mid.cpp
        Openerp/Code/tsp_mid2.cpp
        Openerp/Code/WaterJug.cpp
        Openerp/Code/WaterJug2.cpp
        Openerp/Code/xoa_space.cpp
        OpenerpByMe/CountUoc.cpp
        OpenerpByMe/HashString.cpp
        OpenerpByMe/SumPairEqualK.cpp
        OpenerpByMe/TextReplace.cpp
        TTUD_midtest/Bai1.cpp
        TTUD_midtest/DayChan.cpp
        TTUD_midtest/DayChan2.cpp
        TTUD_midtest/DIGIT.cpp
        TTUD_midtest/DINO.cpp
        TTUD_midtest/RUN.cpp
        TTUD_midtest/SUMX.cpp
        TTUD_midtest/test.cpp)
